fixed main overlap issue with sidebar

--- a/EVS/EVS-war/web/resources/css/global.css
+++ b/EVS/EVS-war/web/resources/css/global.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500');
 
 body {
-    overflow-x: hidden;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
 }
@@ -10,11 +9,14 @@ body {
 
 #global-container {
     display: flex;
-    position: absolute;
-    left: 250px;
-    right: 0;
+    position: relative;
+    left: 200px;
+    right: 10px;
     bottom: 0;
     top:0;
+}
+.container-fluid {
+    flex:1;
 }
 
 #viewport {
@@ -22,7 +24,4 @@ body {
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-}
-footer{
-    flex: shrink;
 }
